Saved Jupyter notebook 'notebook editor for compute_GjLGrGsz'

--- a/ipython_notebooks/notebook editor for compute_GjLGrGsz.ipynb
+++ b/ipython_notebooks/notebook editor for compute_GjLGrGsz.ipynb
@@ -67,6 +67,15 @@
       "outputs": []
     },
     {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "    def download_image(link):\n        #self.download_count +\u003d 1\n        # Get the image link\n        try:\n            path \u003d urllib.parse.urlsplit(link).path\n            filename \u003d posixpath.basename(path).split(\u0027?\u0027)[0]\n            file_type \u003d filename.split(\".\")[-1]\n            if file_type.lower() not in [\"jpe\", \"jpeg\", \"jfif\", \"exif\", \"tiff\", \"gif\", \"bmp\", \"png\", \"webp\", \"jpg\"]:\n                file_type \u003d \"jpg\"\n                \n            #if self.verbose:\n                # Download the image\n            print(\"[%] Downloading Image #{} from {}\".format(self.download_count, link))\n                \n            self.save_image(link, self.output_dir.joinpath(\"Image_{}.{}\".format(\n                str(self.download_count), file_type)))\n            if self.verbose:\n                print(\"[%] File Downloaded !\\n\")\n\n        except Exception as e:\n            self.download_count -\u003d 1\n            print(\"[!] Issue getting: {}\\n[!] Error:: {}\".format(link, e))"
+      ],
+      "outputs": []
+    },
+    {
       "execution_count": 7,
       "cell_type": "code",
       "metadata": {},
