--- a/ipython_notebooks/notebook editor for compute_GjLGrGsz.ipynb
+++ b/ipython_notebooks/notebook editor for compute_GjLGrGsz.ipynb
@@ -67,22 +67,13 @@
       "outputs": []
     },
     {
-      "execution_count": 12,
+      "execution_count": 13,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "def download_image(link, output_dir, image_name, timeout\u003d60):\n     headers \u003d {\u0027User-Agent\u0027: \u0027Mozilla/5.0 (X11; Linux x86_64) \u0027 \n        \u0027AppleWebKit/537.11 (KHTML, like Gecko) \u0027\n        \u0027Chrome/23.0.1271.64 Safari/537.11\u0027,\n        \u0027Accept\u0027: \u0027text/html,application/xhtml+xml,application/xml;q\u003d0.9,*/*;q\u003d0.8\u0027,\n        \u0027Accept-Charset\u0027: \u0027ISO-8859-1,utf-8;q\u003d0.7,*;q\u003d0.3\u0027,\n        \u0027Accept-Encoding\u0027: \u0027none\u0027,\n        \u0027Accept-Language\u0027: \u0027en-US,en;q\u003d0.8\u0027,\n        \u0027Connection\u0027: \u0027keep-alive\u0027}       \n    # Get the image link\n    try:\n        path \u003d urllib.parse.urlsplit(link).path\n        filename \u003d posixpath.basename(path).split(\u0027?\u0027)[0]\n        file_type \u003d filename.split(\".\")[-1]\n        if file_type.lower() not in [\"jpe\", \"jpeg\", \"jfif\", \"exif\", \"tiff\", \"gif\", \"bmp\", \"png\", \"webp\", \"jpg\"]:\n            file_type \u003d \"jpg\"\n\n        # Download the image\n        print(\"[%] Downloading Image from {}\".format(link))\n\n        # Save the image\n        file_path \u003d output_dir.joinpath(f\"{image_name}.{file_type}\")\n        request \u003d urllib.request.Request(link, None, headers)\n        image \u003d urllib.request.urlopen(request, timeout\u003dtimeout).read()\n        if not imghdr.what(None, image):\n            print(\u0027[Error]Invalid image, not saving {}\\n\u0027.format(link))\n            raise ValueError(\u0027Invalid image, not saving {}\\n\u0027.format(link))\n        with open(str(file_path), \u0027wb\u0027) as f:\n            f.write(image)\n        print(\"[%] File Downloaded !\\n\")\n\n    except Exception as e:\n        print(\"[!] Issue getting: {}\\n[!] Error:: {}\".format(link, e))"
+        "def download_image(link, output_dir, image_name, timeout\u003d60):\n    headers \u003d {\u0027User-Agent\u0027: \u0027Mozilla/5.0 (X11; Linux x86_64) \u0027 \n        \u0027AppleWebKit/537.11 (KHTML, like Gecko) \u0027\n        \u0027Chrome/23.0.1271.64 Safari/537.11\u0027,\n        \u0027Accept\u0027: \u0027text/html,application/xhtml+xml,application/xml;q\u003d0.9,*/*;q\u003d0.8\u0027,\n        \u0027Accept-Charset\u0027: \u0027ISO-8859-1,utf-8;q\u003d0.7,*;q\u003d0.3\u0027,\n        \u0027Accept-Encoding\u0027: \u0027none\u0027,\n        \u0027Accept-Language\u0027: \u0027en-US,en;q\u003d0.8\u0027,\n        \u0027Connection\u0027: \u0027keep-alive\u0027}       \n    # Get the image link\n    try:\n        path \u003d urllib.parse.urlsplit(link).path\n        filename \u003d posixpath.basename(path).split(\u0027?\u0027)[0]\n        file_type \u003d filename.split(\".\")[-1]\n        if file_type.lower() not in [\"jpe\", \"jpeg\", \"jfif\", \"exif\", \"tiff\", \"gif\", \"bmp\", \"png\", \"webp\", \"jpg\"]:\n            file_type \u003d \"jpg\"\n\n        # Download the image\n        print(\"[%] Downloading Image from {}\".format(link))\n\n        # Save the image\n        file_path \u003d output_dir.joinpath(f\"{image_name}.{file_type}\")\n        request \u003d urllib.request.Request(link, None, headers)\n        image \u003d urllib.request.urlopen(request, timeout\u003dtimeout).read()\n        if not imghdr.what(None, image):\n            print(\u0027[Error]Invalid image, not saving {}\\n\u0027.format(link))\n            raise ValueError(\u0027Invalid image, not saving {}\\n\u0027.format(link))\n        with open(str(file_path), \u0027wb\u0027) as f:\n            f.write(image)\n        print(\"[%] File Downloaded !\\n\")\n\n    except Exception as e:\n        print(\"[!] Issue getting: {}\\n[!] Error:: {}\".format(link, e))"
       ],
-      "outputs": [
-        {
-          "output_type": "error",
-          "evalue": "unindent does not match any outer indentation level (\u003ctokenize\u003e, line 11)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"\u003ctokenize\u003e\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    try:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
-          ],
-          "ename": "IndentationError"
-        }
-      ]
+      "outputs": []
     },
     {
       "execution_count": 7,
@@ -112,11 +103,56 @@
       ]
     },
     {
+      "execution_count": 14,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "from collections import Counter"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 15,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "labels \u003d Counter()"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 16,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "labels.update(\u0027black\u0027)"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 17,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "labels"
+      ],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "metadata": {},
+          "data": {
+            "text/plain": "Counter({\u0027b\u0027: 1, \u0027l\u0027: 1, \u0027a\u0027: 1, \u0027c\u0027: 1, \u0027k\u0027: 1})"
+          },
+          "execution_count": 17
+        }
+      ]
+    },
+    {
       "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        ""
+        "download_image(row[\u0027url\u0027], output_dir, image_name, timeout\u003d60)"
       ],
       "outputs": []
     },
