Saved Jupyter notebook 'notebook editor for compute_GjLGrGsz'

--- a/ipython_notebooks/notebook editor for compute_GjLGrGsz.ipynb
+++ b/ipython_notebooks/notebook editor for compute_GjLGrGsz.ipynb
@@ -94,13 +94,22 @@
       ]
     },
     {
-      "execution_count": 14,
+      "execution_count": 29,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "from collections import Counter\n\nlabels \u003d Counter()\n\n"
+        "from collections import Counter\n\nlabels \u003d Counter()\noutput_dir \u003d images.get_path()\n\nlink \u003d row[\u0027url\u0027]\n\n\nrow[\u0027label\u0027]\n\noutput_dir.\n\n#def download_image(link, output_dir, image_name, timeout\u003d60)"
       ],
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "metadata": {},
+          "data": {
+            "text/plain": "\u0027black\u0027"
+          },
+          "execution_count": 29
+        }
+      ]
     },
     {
       "execution_count": 18,
@@ -148,11 +157,38 @@
       "outputs": []
     },
     {
+      "execution_count": 24,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "\n\n\n\n\n\n\n# Write recipe outputs\nimages \u003d dataiku.Folder(\"GjLGrGsz\")"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 25,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "images.get_path()"
+      ],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "metadata": {},
+          "data": {
+            "text/plain": "\u0027/Users/davidcarlson/Library/dss/design/managed_folders/WEBAREBARES/GjLGrGsz\u0027"
+          },
+          "execution_count": 25
+        }
+      ]
+    },
+    {
       "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "\n\n\n\n\n\n\n# Write recipe outputs\nimages \u003d dataiku.Folder(\"GjLGrGsz\")\nimages_info \u003d images.get_info()"
+        ""
       ],
       "outputs": []
     }
