--- a/ipython_notebooks/notebook editor for compute_GjLGrGsz.ipynb
+++ b/ipython_notebooks/notebook editor for compute_GjLGrGsz.ipynb
@@ -40,11 +40,11 @@
       "outputs": []
     },
     {
-      "execution_count": 5,
+      "execution_count": 31,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd, numpy as np\nfrom dataiku import pandasutils as pdu"
+        "# -*- coding: utf-8 -*-\nimport dataiku\nimport os\nimport pandas as pd, numpy as np\nfrom dataiku import pandasutils as pdu"
       ],
       "outputs": []
     },
@@ -94,20 +94,23 @@
       ]
     },
     {
-      "execution_count": 29,
+      "execution_count": 30,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "from collections import Counter\n\nlabels \u003d Counter()\noutput_dir \u003d images.get_path()\n\nlink \u003d row[\u0027url\u0027]\n\n\nrow[\u0027label\u0027]\n\noutput_dir.\n\n#def download_image(link, output_dir, image_name, timeout\u003d60)"
+        "from collections import Counter\n\nlabels \u003d Counter()\noutput_dir \u003d images.get_path()\n\nlink \u003d row[\u0027url\u0027]\nlabel \u003d row[\u0027label\u0027]\n\noutput_dir.joinpath(label)\n\n#def download_image(link, output_dir, image_name, timeout\u003d60)"
       ],
       "outputs": [
         {
-          "output_type": "execute_result",
-          "metadata": {},
-          "data": {
-            "text/plain": "\u0027black\u0027"
-          },
-          "execution_count": 29
+          "output_type": "error",
+          "evalue": "\u0027str\u0027 object has no attribute \u0027joinpath\u0027",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m\u003cipython-input-30-fa3744a198a2\u003e\u001b[0m in \u001b[0;36m\u003cmodule\u003e\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mlabel\u001b[0m \u001b[0;34m\u003d\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\u0027label\u0027\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----\u003e 9\u001b[0;31m \u001b[0moutput_dir\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoinpath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m#def download_image(link, output_dir, image_name, timeout\u003d60)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: \u0027str\u0027 object has no attribute \u0027joinpath\u0027"
+          ],
+          "ename": "AttributeError"
         }
       ]
     },
