Saved Jupyter notebook 'notebook editor for compute_GjLGrGsz'

--- a/ipython_notebooks/notebook editor for compute_GjLGrGsz.ipynb
+++ b/ipython_notebooks/notebook editor for compute_GjLGrGsz.ipynb
@@ -94,23 +94,29 @@
       ]
     },
     {
-      "execution_count": 30,
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "from collections import Counter\n\nlabels \u003d Counter()\noutput_dir \u003d images.get_path()\n\nlink \u003d row[\u0027url\u0027]\nlabel \u003d row[\u0027label\u0027]\n\noutput_dir.joinpath(label)\n\n#def download_image(link, output_dir, image_name, timeout\u003d60)"
+        "os.path"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 32,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "from collections import Counter\n\nlabels \u003d Counter()\noutput_dir \u003d images.get_path()\n\nlink \u003d row[\u0027url\u0027]\nlabel \u003d row[\u0027label\u0027]\n\n\n\nos.path.join(output_dir, label)\n\n#def download_image(link, output_dir, image_name, timeout\u003d60)"
       ],
       "outputs": [
         {
-          "output_type": "error",
-          "evalue": "\u0027str\u0027 object has no attribute \u0027joinpath\u0027",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m\u003cipython-input-30-fa3744a198a2\u003e\u001b[0m in \u001b[0;36m\u003cmodule\u003e\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mlabel\u001b[0m \u001b[0;34m\u003d\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\u0027label\u0027\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----\u003e 9\u001b[0;31m \u001b[0moutput_dir\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoinpath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m#def download_image(link, output_dir, image_name, timeout\u003d60)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: \u0027str\u0027 object has no attribute \u0027joinpath\u0027"
-          ],
-          "ename": "AttributeError"
+          "output_type": "execute_result",
+          "metadata": {},
+          "data": {
+            "text/plain": "\u0027/Users/davidcarlson/Library/dss/design/managed_folders/WEBAREBARES/GjLGrGsz/black\u0027"
+          },
+          "execution_count": 32
         }
       ]
     },
