Saved Jupyter notebook 'notebook editor for compute_GjLGrGsz'

--- a/ipython_notebooks/notebook editor for compute_GjLGrGsz.ipynb
+++ b/ipython_notebooks/notebook editor for compute_GjLGrGsz.ipynb
@@ -98,25 +98,25 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "os.path"
+        "os.makedirs()"
       ],
       "outputs": []
     },
     {
-      "execution_count": 32,
+      "execution_count": 37,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "from collections import Counter\n\nlabels \u003d Counter()\noutput_dir \u003d images.get_path()\n\nlink \u003d row[\u0027url\u0027]\nlabel \u003d row[\u0027label\u0027]\n\n\n\nos.path.join(output_dir, label)\n\n#def download_image(link, output_dir, image_name, timeout\u003d60)"
+        "from collections import Counter\n\nlabels_ctr \u003d Counter()\noutput_dir \u003d images.get_path()\n\nlink \u003d row[\u0027url\u0027]\nlabel \u003d row[\u0027label\u0027]\n\nlabel_dir \u003d os.path.join(output_dir, label)\n\nos.makedirs(label_dir, exist_ok\u003dTrue)\n\nlabels_ctr[label] +\u003d 1\n\nlabels_ctr[label]\n\n#def download_image(link, output_dir, image_name, timeout\u003d60)"
       ],
       "outputs": [
         {
           "output_type": "execute_result",
           "metadata": {},
           "data": {
-            "text/plain": "\u0027/Users/davidcarlson/Library/dss/design/managed_folders/WEBAREBARES/GjLGrGsz/black\u0027"
+            "text/plain": "1"
           },
-          "execution_count": 32
+          "execution_count": 37
         }
       ]
     },
