Saved Jupyter notebook 'notebook editor for compute_GjLGrGsz'

--- a/ipython_notebooks/notebook editor for compute_GjLGrGsz.ipynb
+++ b/ipython_notebooks/notebook editor for compute_GjLGrGsz.ipynb
@@ -40,16 +40,16 @@
       "outputs": []
     },
     {
-      "execution_count": 31,
+      "execution_count": 45,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# -*- coding: utf-8 -*-\nimport dataiku\nimport os\nimport pandas as pd, numpy as np\nfrom dataiku import pandasutils as pdu"
+        "# -*- coding: utf-8 -*-\nimport dataiku\nimport os\nimport urllib\nimport posixpath\nimport pandas as pd\nimport numpy as np\nfrom dataiku import pandasutils as pdu"
       ],
       "outputs": []
     },
     {
-      "execution_count": 6,
+      "execution_count": 46,
       "cell_type": "code",
       "metadata": {},
       "source": [
@@ -58,7 +58,7 @@
       "outputs": []
     },
     {
-      "execution_count": 13,
+      "execution_count": 47,
       "cell_type": "code",
       "metadata": {},
       "source": [
@@ -67,7 +67,7 @@
       "outputs": []
     },
     {
-      "execution_count": 7,
+      "execution_count": 42,
       "cell_type": "code",
       "metadata": {},
       "source": [
@@ -76,7 +76,7 @@
       "outputs": []
     },
     {
-      "execution_count": 8,
+      "execution_count": 43,
       "cell_type": "code",
       "metadata": {},
       "source": [
@@ -89,34 +89,22 @@
           "data": {
             "text/plain": "{\u0027label\u0027: \u0027black\u0027, \u0027url\u0027: \u0027https://www.gannett-cdn.com/-mm-/9e1f6e2ee20f44aa1f3be4f71e9f3e52b6ae2c7e/c\u003d0-110-2121-1303/local/-/media/2018/01/01/Morristown/B9330818010Z.1_20180101143636_000_GC4KOGOGN.1-0.jpg?width\u003d2121\u0026amp;height\u003d1193\u0026amp;fit\u003dcrop\u0026amp;format\u003dpjpg\u0026amp;auto\u003dwebp\u0027}"
           },
-          "execution_count": 8
+          "execution_count": 43
         }
       ]
     },
     {
-      "execution_count": 0,
+      "execution_count": 44,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "os.makedirs()"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 37,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "from collections import Counter\n\nlabels_ctr \u003d Counter()\noutput_dir \u003d images.get_path()\n\nlink \u003d row[\u0027url\u0027]\nlabel \u003d row[\u0027label\u0027]\n\nlabel_dir \u003d os.path.join(output_dir, label)\n\nos.makedirs(label_dir, exist_ok\u003dTrue)\n\nlabels_ctr[label] +\u003d 1\n\nlabels_ctr[label]\n\n#def download_image(link, output_dir, image_name, timeout\u003d60)"
+        "from collections import Counter\n\nlabels_ctr \u003d Counter()\noutput_dir \u003d images.get_path()\n\nlink \u003d row[\u0027url\u0027]\nlabel \u003d row[\u0027label\u0027]\n\nlabel_dir \u003d os.path.join(output_dir, label)\n\nos.makedirs(label_dir, exist_ok\u003dTrue)\n\nlabels_ctr[label] +\u003d 1\n\ndownload_image(link, label_dir, f\u0027{label}_{labels_ctr[label]}\u0027)"
       ],
       "outputs": [
         {
-          "output_type": "execute_result",
-          "metadata": {},
-          "data": {
-            "text/plain": "1"
-          },
-          "execution_count": 37
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "[!] Issue getting: https://www.gannett-cdn.com/-mm-/9e1f6e2ee20f44aa1f3be4f71e9f3e52b6ae2c7e/c\u003d0-110-2121-1303/local/-/media/2018/01/01/Morristown/B9330818010Z.1_20180101143636_000_GC4KOGOGN.1-0.jpg?width\u003d2121\u0026amp;height\u003d1193\u0026amp;fit\u003dcrop\u0026amp;format\u003dpjpg\u0026amp;auto\u003dwebp\n[!] Error:: name \u0027posixpath\u0027 is not defined\n"
         }
       ]
     },
