--- a/ipython_notebooks/notebook editor for compute_GjLGrGsz.ipynb
+++ b/ipython_notebooks/notebook editor for compute_GjLGrGsz.ipynb
@@ -40,43 +40,43 @@
       "outputs": []
     },
     {
-      "execution_count": 45,
+      "execution_count": 65,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# -*- coding: utf-8 -*-\nimport dataiku\nimport os\nimport urllib\nimport posixpath\nimport pandas as pd\nimport numpy as np\nfrom dataiku import pandasutils as pdu"
+        "# -*- coding: utf-8 -*-\nimport dataiku\nimport os\nimport urllib\nimport imghdr\nimport posixpath\nimport pandas as pd\nimport numpy as np\nfrom collections import Counter\nfrom dataiku import pandasutils as pdu"
       ],
       "outputs": []
     },
     {
-      "execution_count": 46,
+      "execution_count": 63,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Read recipe inputs\nimage_urls \u003d dataiku.Dataset(\"image_urls\")\nimage_urls_df \u003d image_urls.iter_rows()"
+        "# Read recipe inputs\nimage_urls \u003d dataiku.Dataset(\"image_urls\")"
       ],
       "outputs": []
     },
     {
-      "execution_count": 47,
+      "execution_count": 64,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "def download_image(link, output_dir, image_name, timeout\u003d60):\n    headers \u003d {\u0027User-Agent\u0027: \u0027Mozilla/5.0 (X11; Linux x86_64) \u0027 \n        \u0027AppleWebKit/537.11 (KHTML, like Gecko) \u0027\n        \u0027Chrome/23.0.1271.64 Safari/537.11\u0027,\n        \u0027Accept\u0027: \u0027text/html,application/xhtml+xml,application/xml;q\u003d0.9,*/*;q\u003d0.8\u0027,\n        \u0027Accept-Charset\u0027: \u0027ISO-8859-1,utf-8;q\u003d0.7,*;q\u003d0.3\u0027,\n        \u0027Accept-Encoding\u0027: \u0027none\u0027,\n        \u0027Accept-Language\u0027: \u0027en-US,en;q\u003d0.8\u0027,\n        \u0027Connection\u0027: \u0027keep-alive\u0027}       \n    # Get the image link\n    try:\n        path \u003d urllib.parse.urlsplit(link).path\n        filename \u003d posixpath.basename(path).split(\u0027?\u0027)[0]\n        file_type \u003d filename.split(\".\")[-1]\n        if file_type.lower() not in [\"jpe\", \"jpeg\", \"jfif\", \"exif\", \"tiff\", \"gif\", \"bmp\", \"png\", \"webp\", \"jpg\"]:\n            file_type \u003d \"jpg\"\n\n        # Download the image\n        print(\"[%] Downloading Image from {}\".format(link))\n\n        # Save the image\n        file_path \u003d output_dir.joinpath(f\"{image_name}.{file_type}\")\n        request \u003d urllib.request.Request(link, None, headers)\n        image \u003d urllib.request.urlopen(request, timeout\u003dtimeout).read()\n        if not imghdr.what(None, image):\n            print(\u0027[Error]Invalid image, not saving {}\\n\u0027.format(link))\n            raise ValueError(\u0027Invalid image, not saving {}\\n\u0027.format(link))\n        with open(str(file_path), \u0027wb\u0027) as f:\n            f.write(image)\n        print(\"[%] File Downloaded !\\n\")\n\n    except Exception as e:\n        print(\"[!] Issue getting: {}\\n[!] Error:: {}\".format(link, e))"
+        "def download_image(link, output_dir, image_name, timeout\u003d60):\n    headers \u003d {\u0027User-Agent\u0027: \u0027Mozilla/5.0 (X11; Linux x86_64) \u0027 \n        \u0027AppleWebKit/537.11 (KHTML, like Gecko) \u0027\n        \u0027Chrome/23.0.1271.64 Safari/537.11\u0027,\n        \u0027Accept\u0027: \u0027text/html,application/xhtml+xml,application/xml;q\u003d0.9,*/*;q\u003d0.8\u0027,\n        \u0027Accept-Charset\u0027: \u0027ISO-8859-1,utf-8;q\u003d0.7,*;q\u003d0.3\u0027,\n        \u0027Accept-Encoding\u0027: \u0027none\u0027,\n        \u0027Accept-Language\u0027: \u0027en-US,en;q\u003d0.8\u0027,\n        \u0027Connection\u0027: \u0027keep-alive\u0027}       \n    # Get the image link\n    try:\n        path \u003d urllib.parse.urlsplit(link).path\n        filename \u003d posixpath.basename(path).split(\u0027?\u0027)[0]\n        file_type \u003d filename.split(\".\")[-1]\n        if file_type.lower() not in [\"jpe\", \"jpeg\", \"jfif\", \"exif\", \"tiff\", \"gif\", \"bmp\", \"png\", \"webp\", \"jpg\"]:\n            file_type \u003d \"jpg\"\n\n        # Download the image\n        print(\"[%] Downloading Image from {}\".format(link))\n\n        # Save the image\n        file_path \u003d os.path.join(output_dir, f\"{image_name}.{file_type}\")\n        request \u003d urllib.request.Request(link, None, headers)\n        image \u003d urllib.request.urlopen(request, timeout\u003dtimeout).read()\n        if not imghdr.what(None, image):\n            print(\u0027[Error]Invalid image, not saving {}\\n\u0027.format(link))\n            raise ValueError(\u0027Invalid image, not saving {}\\n\u0027.format(link))\n        with open(str(file_path), \u0027wb\u0027) as f:\n            f.write(image)\n        print(\"[%] File Downloaded !\\n\")\n\n    except Exception as e:\n        print(\"[!] Issue getting: {}\\n[!] Error:: {}\".format(link, e))"
       ],
       "outputs": []
     },
     {
-      "execution_count": 42,
+      "execution_count": 58,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "for row in image_urls_df:\n    break"
+        ""
       ],
       "outputs": []
     },
     {
-      "execution_count": 43,
+      "execution_count": 59,
       "cell_type": "code",
       "metadata": {},
       "source": [
@@ -89,33 +89,57 @@
           "data": {
             "text/plain": "{\u0027label\u0027: \u0027black\u0027, \u0027url\u0027: \u0027https://www.gannett-cdn.com/-mm-/9e1f6e2ee20f44aa1f3be4f71e9f3e52b6ae2c7e/c\u003d0-110-2121-1303/local/-/media/2018/01/01/Morristown/B9330818010Z.1_20180101143636_000_GC4KOGOGN.1-0.jpg?width\u003d2121\u0026amp;height\u003d1193\u0026amp;fit\u003dcrop\u0026amp;format\u003dpjpg\u0026amp;auto\u003dwebp\u0027}"
           },
-          "execution_count": 43
+          "execution_count": 59
         }
       ]
     },
     {
-      "execution_count": 44,
+      "execution_count": 60,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "from collections import Counter\n\nlabels_ctr \u003d Counter()\noutput_dir \u003d images.get_path()\n\nlink \u003d row[\u0027url\u0027]\nlabel \u003d row[\u0027label\u0027]\n\nlabel_dir \u003d os.path.join(output_dir, label)\n\nos.makedirs(label_dir, exist_ok\u003dTrue)\n\nlabels_ctr[label] +\u003d 1\n\ndownload_image(link, label_dir, f\u0027{label}_{labels_ctr[label]}\u0027)"
+        "\nlabels_ctr \u003d Counter()\noutput_dir \u003d images.get_path()\n\nlink \u003d row[\u0027url\u0027]\nlabel \u003d row[\u0027label\u0027]\n\nlabel_dir \u003d os.path.join(output_dir, label)\n\nos.makedirs(label_dir, exist_ok\u003dTrue)\n\nlabels_ctr[label] +\u003d 1\n\ndownload_image(link, label_dir, f\u0027{label}_{labels_ctr[label]}\u0027)"
       ],
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "[!] Issue getting: https://www.gannett-cdn.com/-mm-/9e1f6e2ee20f44aa1f3be4f71e9f3e52b6ae2c7e/c\u003d0-110-2121-1303/local/-/media/2018/01/01/Morristown/B9330818010Z.1_20180101143636_000_GC4KOGOGN.1-0.jpg?width\u003d2121\u0026amp;height\u003d1193\u0026amp;fit\u003dcrop\u0026amp;format\u003dpjpg\u0026amp;auto\u003dwebp\n[!] Error:: name \u0027posixpath\u0027 is not defined\n"
+          "text": "[%] Downloading Image from https://www.gannett-cdn.com/-mm-/9e1f6e2ee20f44aa1f3be4f71e9f3e52b6ae2c7e/c\u003d0-110-2121-1303/local/-/media/2018/01/01/Morristown/B9330818010Z.1_20180101143636_000_GC4KOGOGN.1-0.jpg?width\u003d2121\u0026amp;height\u003d1193\u0026amp;fit\u003dcrop\u0026amp;format\u003dpjpg\u0026amp;auto\u003dwebp\n[%] File Downloaded !\n\n"
         }
       ]
     },
     {
-      "execution_count": 18,
+      "execution_count": 61,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        ""
+        "label_dir"
       ],
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "metadata": {},
+          "data": {
+            "text/plain": "\u0027/Users/davidcarlson/Library/dss/design/managed_folders/WEBAREBARES/GjLGrGsz/black\u0027"
+          },
+          "execution_count": 61
+        }
+      ]
+    },
+    {
+      "execution_count": 62,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "! ls /Users/davidcarlson/Library/dss/design/managed_folders/WEBAREBARES/GjLGrGsz/black"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "black_1.jpg\r\n"
+        }
+      ]
     },
     {
       "execution_count": 22,
