Saved Jupyter notebook 'notebook editor for compute_GjLGrGsz'

--- a/ipython_notebooks/notebook editor for compute_GjLGrGsz.ipynb
+++ b/ipython_notebooks/notebook editor for compute_GjLGrGsz.ipynb
@@ -58,6 +58,15 @@
       "outputs": []
     },
     {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Write recipe outputs\nimages \u003d dataiku.Folder(\"GjLGrGsz\")"
+      ],
+      "outputs": []
+    },
+    {
       "execution_count": 64,
       "cell_type": "code",
       "metadata": {},
@@ -67,38 +76,11 @@
       "outputs": []
     },
     {
-      "execution_count": 58,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        ""
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 59,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "row"
-      ],
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "metadata": {},
-          "data": {
-            "text/plain": "{\u0027label\u0027: \u0027black\u0027, \u0027url\u0027: \u0027https://www.gannett-cdn.com/-mm-/9e1f6e2ee20f44aa1f3be4f71e9f3e52b6ae2c7e/c\u003d0-110-2121-1303/local/-/media/2018/01/01/Morristown/B9330818010Z.1_20180101143636_000_GC4KOGOGN.1-0.jpg?width\u003d2121\u0026amp;height\u003d1193\u0026amp;fit\u003dcrop\u0026amp;format\u003dpjpg\u0026amp;auto\u003dwebp\u0027}"
-          },
-          "execution_count": 59
-        }
-      ]
-    },
-    {
       "execution_count": 60,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "\nlabels_ctr \u003d Counter()\noutput_dir \u003d images.get_path()\n\nlink \u003d row[\u0027url\u0027]\nlabel \u003d row[\u0027label\u0027]\n\nlabel_dir \u003d os.path.join(output_dir, label)\n\nos.makedirs(label_dir, exist_ok\u003dTrue)\n\nlabels_ctr[label] +\u003d 1\n\ndownload_image(link, label_dir, f\u0027{label}_{labels_ctr[label]}\u0027)"
+        "labels_ctr \u003d Counter()\noutput_dir \u003d images.get_path()\n\nfor row in image_urls.iter_rows():\n    link \u003d row[\u0027url\u0027]\n    label \u003d row[\u0027label\u0027]\n    label_dir \u003d os.path.join(output_dir, label)\n    os.makedirs(label_dir, exist_ok\u003dTrue)\n    labels_ctr[label] +\u003d 1\n    download_image(link, label_dir, f\u0027{label}_{labels_ctr[label]}\u0027)"
       ],
       "outputs": [
         {
@@ -107,111 +89,6 @@
           "text": "[%] Downloading Image from https://www.gannett-cdn.com/-mm-/9e1f6e2ee20f44aa1f3be4f71e9f3e52b6ae2c7e/c\u003d0-110-2121-1303/local/-/media/2018/01/01/Morristown/B9330818010Z.1_20180101143636_000_GC4KOGOGN.1-0.jpg?width\u003d2121\u0026amp;height\u003d1193\u0026amp;fit\u003dcrop\u0026amp;format\u003dpjpg\u0026amp;auto\u003dwebp\n[%] File Downloaded !\n\n"
         }
       ]
-    },
-    {
-      "execution_count": 61,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "label_dir"
-      ],
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "metadata": {},
-          "data": {
-            "text/plain": "\u0027/Users/davidcarlson/Library/dss/design/managed_folders/WEBAREBARES/GjLGrGsz/black\u0027"
-          },
-          "execution_count": 61
-        }
-      ]
-    },
-    {
-      "execution_count": 62,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "! ls /Users/davidcarlson/Library/dss/design/managed_folders/WEBAREBARES/GjLGrGsz/black"
-      ],
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": "black_1.jpg\r\n"
-        }
-      ]
-    },
-    {
-      "execution_count": 22,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "labels[\u0027black\u0027] +\u003d 1"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 23,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "labels[\u0027black\u0027]"
-      ],
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "metadata": {},
-          "data": {
-            "text/plain": "2"
-          },
-          "execution_count": 23
-        }
-      ]
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "download_image(row[\u0027url\u0027], output_dir, image_name, timeout\u003d60)"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 24,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "\n\n\n\n\n\n\n# Write recipe outputs\nimages \u003d dataiku.Folder(\"GjLGrGsz\")"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 25,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "images.get_path()"
-      ],
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "metadata": {},
-          "data": {
-            "text/plain": "\u0027/Users/davidcarlson/Library/dss/design/managed_folders/WEBAREBARES/GjLGrGsz\u0027"
-          },
-          "execution_count": 25
-        }
-      ]
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        ""
-      ],
-      "outputs": []
     }
   ]
 }
