Saved Jupyter notebook 'notebook editor for compute_dgYV6MxO'

--- a/ipython_notebooks/notebook editor for compute_dgYV6MxO.ipynb
+++ b/ipython_notebooks/notebook editor for compute_dgYV6MxO.ipynb
@@ -80,7 +80,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "labels_ctr \u003d Counter()\noutput_dir \u003d images.get_path()\n\nfor row in image_urls.iter_rows():\n    link \u003d row[\u0027url\u0027]\n    label \u003d row[\u0027label\u0027]\n    label_dir \u003d os.path.join(output_dir, label)\n    os.makedirs(label_dir, exist_ok\u003dTrue)\n    labels_ctr[label] +\u003d 1\n    download_image(link, label_dir, f\u0027{label}_{labels_ctr[label]}\u0027)"
+        "label_dir \u003d images.get_path()\nlabel \u003d \u0027bear\u0027\n\ndownload_image(link, label_dir, f\u0027{label}_{labels_ctr[label]}\u0027)"
       ],
       "outputs": []
     }
